--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
     <noscript>
       <strong>We're sorry but trustnet-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id="fb-root"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <div id="fb-root"></div>
 </html>
