--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but Trustnet doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="fb-root"></div>
     <div id="app"></div>
