Update info about extensions

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <div id="fb-root"></div>
+  <!-- <div id="fb-root"></div> -->
 </html>
