Update News page

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <meta property="og:title" content="Trustnet" />
     <meta property="og:description" content="Social content sharing platform that allows users to assess any piece of content" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://trustnet.csail.mit.edu/" />
+    <meta property="og:image" content="https://trustnet.csail.mit.edu/logo.png" />
   </head>
   <body>
     <noscript>
